# alpha-hunt-kit

./: .gitignore  AGENTS.md  LICENSE  README.md  manifest.yaml  pyproject.toml
.github/workflows/: ci.yml
alpha_hunt/: backtest.py  cli.py  graveyard.py  metrics.py  paths.py  report.py  schemas.py  sources.py  state.py
alpha_hunt/adapters/: csv_bars.py  yfinance_optional.py
alpha_hunt/strategies/: baseline.py  current.py
docs/: adapters.md  agent_prompt.md  architecture.md  blog_outline.md  public_release_checklist.md  research_protocol.md  state_schema.md
examples/sample-run/: metrics.json  report.md
experiments/: baseline.json  current.json
fixtures/bars/: demo_ohlcv.csv
fixtures/sources/: seed_sources.jsonl
scripts/: render_static_assets.py  reset_demo_state.sh  run_agent_loop.sh  validate_public_repo.py  validate_public_repo.sh
state/: current.json  experiments.tsv  leaderboard.tsv  sources.jsonl
tests/: test_cli_smoke.py  test_fixture_backtest.py  test_graveyard.py  test_no_private_dependencies.py  test_optional_adapters.py  test_state_schema.py
visuals/: manim_alpha_hunt.py
