[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-hunt-kit"
version = "0.1.0"
description = "Portable, offline-first alpha research loop for coding agents: source, score, falsify, test, and graveyard ideas."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Curupira"}]
keywords = ["trading", "research", "agents", "backtesting", "alpha"]
dependencies = []

[project.urls]
Homepage = "https://github.com/thiagosucupira/alpha-hunt-kit"
Repository = "https://github.com/thiagosucupira/alpha-hunt-kit"
Issues = "https://github.com/thiagosucupira/alpha-hunt-kit/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
visuals = ["pillow>=10.0", "manim>=0.18"]
yfinance = ["yfinance>=0.2"]

[project.scripts]
alpha-hunt = "alpha_hunt.cli:main"

[tool.setuptools.packages.find]
include = ["alpha_hunt*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"visuals/manim_alpha_hunt.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
